src/test/deca/context/invalid/improvided/condition_boolean.deca
{
   // Description:
   // Le type booléen donné n'est pas booléen.
   //
   // Résultats:
   // Ligne 8: The type of the given expression is not boolean. 
   if (3){ }
}
